--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,13 +21,22 @@ h3 {
     opacity: 0.7;
 }
 
+@media (max-width: 576px) {
+    h1 {
+        font-size: 46px;
+    }
+    h2 {
+        font-size: 28px;
+    }
+}
+
 .navigation-links {
     display: flex;
     margin-top: 40px;
     justify-content: center;
 }
 
-.navigation-links a {
+.links {
     margin: 20px;
     border-radius: 4px;
     padding: 20px 15px;
@@ -35,7 +44,7 @@ h3 {
     text-transform: capitalize;
 }
 
-.contact-link {
+.primary-link {
     background: var(--primary-color);
     box-shadow: var(--box-shadow);
     color: white;
@@ -44,16 +53,6 @@ h3 {
 .about-link {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
-}
-
-.primary-link {
-    border-radius: 4px;
-    padding: 20px 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-    background: var(--primary-color);
-    box-shadow: var(--box-shadow);
-    color: white;
 }
 
 .about-paragraphs {
